--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <title>Catogram X</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-    <script src='mainsjs'></script>
     <link rel="shortcut icon" href="img/stars_outline_28.svg" type="image/svg">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script src="js/theme.js"></script>
 <div class="main_wrapper">
     <div class="img">
-        <img class="main_img" src="img/logo.png" alt="">
+        <img class="main_img" src="img/logo.svg" alt="">
     </div>
     <div class="text">
     <h1 class="main_tittle">Catogram X</h1>
-    <p class="description">Experimental telegram client based on official Android sources</p>
-    <a class="download" href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt="">Download</a>
+    <h2 class="description">Experimental telegram client based on official Android sources</h2>
+    <a class="download " href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
 </div>
 </div>
 <div class="features">
