--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+<html lang="en">
+  <head>
+    <meta charset='utf-8'/>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'/>
     <title>Catogram X</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-    <link rel="shortcut icon" href="img/stars_outline_28.svg" type="image/svg">
-</head>
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script src="js/theme.js"></script>
-<div class="main_wrapper">
-    <div class="img">
+    <meta name='viewport' content='width=device-width, initial-scale=1'/>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'/>
+    <link rel="shortcut icon" href="img/stars_outline_28.svg" type="image/svg"/>
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"/>
+    <script src="js/theme.js"/>
+    <div class="main_wrapper">
+      <div class="img">
         <img class="main_img" src="img/logo.svg" alt="">
+      </div>
+      <div class="text">
+        <h1 class="main_tittle">Catogram X</h1>
+        <h2 class="description">Experimental telegram client based on official Android sources</h2>
+        <a class="download " href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
+      </div>
     </div>
-    <div class="text">
-    <h1 class="main_tittle">Catogram X</h1>
-    <h2 class="description">Experimental telegram client based on official Android sources</h2>
-    <a class="download " href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
-</div>
-</div>
-<div class="features">
-    <div class="feature">
+    <div class="features">
+      <div class="feature">
         <img src="img/hieroglyph_character_outline_28.svg" alt="Translate">
         <p class="feature_tittle">Message translator</p>
-        <p class="feature_small">And other quality of life features!
-</p>
-    </div>
-    <div class="feature">
+        <p class="feature_small">And other quality of life features!</p>
+      </div>
+      <div class="feature">
         <img src="img/brush_outline_28.svg" alt="Translate">
-        <p class="feature_tittle">Сustomize</p>
+        <p class="feature_tittle">Customize</p>
         <p class="feature_small">VKUI Icons, ability to use system emojis, monet support (including app icon).</p>
-    </div>
-    <div class="feature">
+      </div>
+      <div class="feature">
         <img src="img/user_circle_outline_28.svg" alt="Translate">
         <p class="feature_tittle">Improved account management</p>
         <p class="feature_small">Supports up to 10 accounts, double bottom for improved security.</p>
-    </div>
-    <div class="feature">
+      </div>
+      <div class="feature">
         <img src="img/stars_outline_28.svg" alt="Translate">
         <p class="feature_tittle">Many others</p>
         <p class="feature_small">Download the app to check them all.</p>
+      </div>
     </div>
-</div>
-<footer class="footer">
-    <p>Copyright © 2022 Site by <a href="sxndw.ml"> sxndwl</a></p>
-</footer>
-</body>
+    <footer class="footer">
+      <p>Copyright © 2022 nift4<br/>Site by <a href="sxndw.ml"> sxndwl</a></p>
+    </footer>
+  </body>
 </html>
