--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="main_img" src="img/logo.svg" alt="">
       </div>
       <div class="text">
-        <h1 class="main_tittle">Catogram X</h1>
+        <h1 class="main_title">Catogram X</h1>
         <h2 class="description">Experimental telegram client based on official Android sources</h2>
         <a class="download " href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
       </div>
@@ -24,22 +24,22 @@
     <div class="features">
       <div class="feature">
         <img src="img/hieroglyph_character_outline_28.svg" alt="Translate">
-        <p class="feature_tittle">Message translator</p>
+        <p class="feature_title">Message translator</p>
         <p class="feature_small">And other quality of life features!</p>
       </div>
       <div class="feature">
         <img src="img/brush_outline_28.svg" alt="Translate">
-        <p class="feature_tittle">Customize</p>
+        <p class="feature_title">Customize</p>
         <p class="feature_small">VKUI Icons, ability to use system emojis, monet support (including app icon).</p>
       </div>
       <div class="feature">
         <img src="img/user_circle_outline_28.svg" alt="Translate">
-        <p class="feature_tittle">Improved account management</p>
+        <p class="feature_title">Improved account management</p>
         <p class="feature_small">Supports up to 10 accounts, double bottom for improved security.</p>
       </div>
       <div class="feature">
         <img src="img/stars_outline_28.svg" alt="Translate">
-        <p class="feature_tittle">Many others</p>
+        <p class="feature_title">Many others</p>
         <p class="feature_small">Download the app to check them all.</p>
       </div>
     </div>
