--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="img/stars_outline_28.svg" type="image/svg"/>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"/>
-    <script src="js/theme.js"/>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script src="js/theme.js"></script>
     <div class="main_wrapper">
       <div class="img">
         <img class="main_img" src="img/logo.svg" alt="">
