--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <link rel="shortcut icon" href="img/stars_outline_28.svg" type="image/svg"/>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script src="js/theme.js"></script>
     <div class="main_wrapper">
       <div class="img">
         <img class="main_img" src="img/logo.svg" alt="">
       </div>
       <div class="text">
         <h1 class="main_title">Catogram X</h1>
-        <h2 class="description">Experimental telegram client based on official Android sources</h2>
+        <h2 class="description">Telegram done better</h2>
         <a class="download " href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
       </div>
     </div>
@@ -44,7 +42,12 @@
       </div>
     </div>
     <footer class="footer">
-      <p>Copyright © 2022 nift4<br/>Site by <a href="sxndw.ml"> sxndwl</a></p>
+        <div class="content">
+      <p style="text-align: center;">Copyright © 2022 nift4</p>
+      <p style="text-align: center;">Site by <a href="https://sxndwl.xyz">sxndwl</a></p>
+      <p style="text-align: center;"><a href="https://nift4.eu.org/imprint.html">Imprint</a> 
+        <a style="text-align: center;" href="https://nift4.eu.org/privacy.html">Privacy Policy</a></p>
+        </div>
     </footer>
   </body>
 </html>
