--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <div class="text">
         <h1 class="main_title">Catogram X</h1>
-        <h2 class="description">Telegram done better</h2>
-        <a class="download " href="https://github.com/CatogramX/CatogramX/releases/download/cx_4.1.1/app.apk" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
+        <h2 class="description">Catogram revival</h2>
+        <a class="download " href="https://github.com/CatogramX/CatogramX/releases/latest" target="_blank"><img class="VKUI" src="img/download_outline_28.svg" alt=""><p class="darkmode-ignore">Download</p></a>
       </div>
     </div>
     <div class="features">
